complete scull_pipe

--- a/scullpipe/Makefile
+++ b/scullpipe/Makefile
@@ -1,11 +1,20 @@
+
+# Add your debugging flag (or not) to CFLAGS
+ifeq ($(DEBUG),y)
+  DEBFLAGS = -O -g -DSCULL_DEBUG # "-O" is needed to expand inlines
+else
+  DEBFLAGS = -O2 
+endif
+CFLAGS += $(DEBFLAGS)
 ifneq ($(KERNELRELEASE),)
 	obj-m:=scullpipe.o
 else
 	KERNELDIR?=/lib/modules/$(shell uname -r)/build
 	PWD:=$(shell pwd)
 default:
+	@echo "DEBUG = " $(DEBFLAGS) 
 	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules
 endif
 
 clean:
-	rm *.ko* *.mod*
+	rm -rf *.o *~ core .depend .*.cmd *.ko *.mod.c .tmp_versions
